# ukrduzt-schedule-bot

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 253310a49174_added_website_settings.py  6edd38e70512_initial_migration.py
app/: __main__.py
app/core/: bot.py  config.py  postgres.py
app/filters/: admin.py
app/handlers/: __init__.py  admins.py  mailing.py  options.py  schedule.py  start.py  stats.py  website.py
app/middlewares/: database.py
app/models/: __init__.py  user.py  website.py
app/services/: mailing.py  scraper.py  users.py  website.py
app/utils/: keyboards.py  schedule.py  scraper.py  states.py
