[project]
name = "ukrduzt-schedule-bot"
version = "0.1.0"
description = "Telegram bot for UkrDUZT university schedule"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
]
